# locker-c18

./: .gitignore  AGENTS.md  BRIEFING.md  README.md  SKILL.md  devbox.json  manifest  pyproject.toml  skills-lock.json  vekdh3ietv5s3rgnoltccineirlragao.darc
.agents/skills/pre-mortem/: SKILL.md
.agents/skills/the-immortals/: SKILL.md
.agents/skills/the-immortals/evals/: evals.json
.beads/: metadata.json
.claude/skills/: the-immortals
docs/: architecture.md
docs/adr/: ADR-06-agent-context-seeding.md  ADR-07-provenance-stamp.md
docs/session-proceedings/: 2026-04-05-the-immortals-template-catalog-spec.md
docs/superpowers/specs/: 2026-04-05-template-catalog-design.md
mcp/: config.json
sandbox/: Dockerfile  compose.yml
scripts/: _dotnet.sh  _mcp.sh  reset.sh  sandbox.sh  setup.sh
templates/: catalog.yaml
templates/a-01/: .gitignore  AGENTS.md  devbox.json
templates/a-01/scripts/: reset.sh  setup.sh
tests/: dotnet.bats  mcp.bats  reset.bats  sandbox.bats  setup.bats
tests/helpers/: mocks.bash
